Change end-of-lines to LF throughout
Minilla assumes that \n matches the platform-specific newline, e.g.,
when extracting AUTHOR from the POD and when checking the Changes file
for the {{$NEXT}} marker.  Since my primary development environment is
LF, change it all to LF.

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,12 @@ end_of_line = CRLF
 [*.{bat,vbs,ps1}]
 end_of_line = CRLF
 
+[{Changes,.editorconfig}]
+end_of_line = LF
+# For Changes, this is a Minilla requirement ---
+# https://github.com/tokuhirom/Minilla/issues/259 .
+# For .editorconfig, it's just for consistency with my other projects :) .
+
 [Makefile]
 indent_style = tab
 
