Checking in changes prior to tagging of version 1.04.
Changelog diff is:

diff --git a/Changes b/Changes
index 76a34aa..f18c6c1 100644
--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Acme-CXW-vars-i

 {{$NEXT}}
+
+1.04 2019-04-26T20:17:02Z
     - Switched to Minilla for maintenance

 1.03    2019-03-27

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,16 +4,14 @@ root = true
 indent_style = space
 trim_trailing_whitespace = true
 indent_size = 4
-end_of_line = CRLF
+end_of_line = LF
+# LF: For Changes, this is a Minilla requirement ---
+# https://github.com/tokuhirom/Minilla/issues/259 .
+# For .editorconfig, it's just for consistency with my other projects :) .
+
 
 [*.{bat,vbs,ps1}]
 end_of_line = CRLF
-
-[{Changes,.editorconfig}]
-end_of_line = LF
-# For Changes, this is a Minilla requirement ---
-# https://github.com/tokuhirom/Minilla/issues/259 .
-# For .editorconfig, it's just for consistency with my other projects :) .
 
 [Makefile]
 indent_style = tab
