Change end-of-lines to LF throughout
Minilla assumes that \n matches the platform-specific newline, e.g.,
when extracting AUTHOR from the POD and when checking the Changes file
for the {{$NEXT}} marker.  Since my primary development environment is
LF, change it all to LF.

--- a/minil.toml
+++ b/minil.toml
@@ -5,5 +5,7 @@ authority="cpan:CXW"
 module_maker="ExtUtilsMakeMaker"
 static_install = "auto"
 
-[release]
-do_not_upload_to_cpan=true
+tag_format="v%v"
+
+#[release]
+#do_not_upload_to_cpan=true
