Changed from Acme::CXW::vars::i back to vars::i
This, in effect, reverts commit b9aaf6ca0b7adc0737a1286e95c4b0b2f52ee812

--- a/minil.toml
+++ b/minil.toml
@@ -1,11 +1,7 @@
-name = "Acme-CXW-vars-i"
+name = "vars-i"
 # badges = ["travis-ci.com"]
-authority="cpan:CXW"
 
-module_maker="ExtUtilsMakeMaker"
+module_maker = "ExtUtilsMakeMaker"
 static_install = "auto"
 
 tag_format="v%v"
-
-#[release]
-#do_not_upload_to_cpan=true
