--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,19 @@
 root = true
 
+# Note: end of line changed from PODMASTER's original CRLF to just LF.
+# For Changes, this is a Minilla requirement ---
+# https://github.com/tokuhirom/Minilla/issues/259 .
+# Also, pod2markdown (from Pod::Markdown) adds an extra BEGIN block
+# before the `# NAME` header if the file is CRLF-delimited.
+
 [*]
 indent_style = space
 trim_trailing_whitespace = true
 indent_size = 4
-end_of_line = CRLF
+end_of_line = LF
 
 [*.{bat,vbs,ps1}]
 end_of_line = CRLF
-
-[{Changes,.editorconfig}]
-end_of_line = LF
-# For Changes, this is a Minilla requirement ---
-# https://github.com/tokuhirom/Minilla/issues/259 .
-# For .editorconfig, it's just for consistency with my other projects :) .
 
 [Makefile]
 indent_style = tab
