Add Travis configuration

--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
 name = "vars-i"
-badges = ["metacpan"]
+badges = ["metacpan", "travis-ci.org"]
 
 module_maker = "ExtUtilsMakeMaker"
 static_install = "auto"
